# Avatar_Rig

./: README.md  pyproject.toml
scripts/: calibrate_thresholds.py
src/avatarrig/: cli.py
src/avatarrig/detectors/: mediapipe_tasks_backend.py
src/avatarrig/patches/: allowed_indices_patch.py
src/avatarrig/schemas/: observation.py
src/avatarrig/stages/: phase1_observations.py  phase1_skeleton_solve.py
src/avatarrig/util/: download.py  repo.py
tests/: conftest.py  test_import.py
